--- a/src/app/buy/buy.tabletop.component.html
+++ b/src/app/buy/buy.tabletop.component.html
@@ -1,17 +1,17 @@
-<div style="vertical-align: middle; background: black; color: white">
+<div style="vertical-align: middle; background: black; color: white; padding-left: 1em; margin-left: 0.1em;">
   <hr style="border: 0.1em solid black">
   <div class="row">
     <div class="col-md-4">
       <div class="col-md-5">Description</div>
       <div class="col-md-3" style="text-align: center;">Exchange</div>
       <div class="col-md-2" style="text-align: center;">Symbol</div>
-      <div class="col-md-2" style="text-align: center;">Price</div>
+      <div class="col-md-2" style="text-align: right;">Price</div>
     </div>
     <div class="col-md-4" style="text-align: center;">
       <div class="col-md-3">
         Quantity
       </div>
-      <div class="col-md-3">Cost</div>
+      <div class="col-md-3" style="margin-left: 1em;">Cost</div>
       <div class="col-md-6">
       </div>
     </div>
