--- a/src/app/login/authview.component.html
+++ b/src/app/login/authview.component.html
@@ -44,10 +44,14 @@
           <br style="display:block; margin-top:2px; line-height:4px;">
           <p class="invCred" *ngIf="invalidCredentials">Invalid credentials provided!</p>
           <div [hidden]="authAction === 'signup'">
-            <button type="submit" class="btn btn-block btn-lg btn-success" >Login</button>
+            <button type="submit" class="btn btn-block btn-lg btn-success" [disabled]="loading">
+              <span *ngIf="!loading">Login</span><span class="fa fa-spinner" *ngIf="loading"></span>
+            </button>
           </div>
           <div [hidden]="authAction === 'login'">
-            <button type="submit" class="btn btn-block btn-lg btn-success" >Sign Up</button>
+            <button type="submit" class="btn btn-block btn-lg btn-success" [disabled]="loading">
+              <span *ngIf="!loading">Sign Up</span><span class="fa fa-spinner" *ngIf="loading"></span>
+            </button>
           </div>
         </form>
       </div>
