--- a/src/app/stocks/stocks.component.html
+++ b/src/app/stocks/stocks.component.html
@@ -10,9 +10,10 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); text-align: center;">
     <h4>Info</h4>
-    This website stores the information about its users to improve the experience of the service provided. No information is shared with other parties
-    <br>
-    <button class="btn btn-default btn-sm" (click)="closeWarning()">OK</button>
+    <p>
+      This website stores information about its users to improve the experience of the service provided. No information is shared with other parties
+    </p>
+    <button class="btn btn-success btn-sm" (click)="closeWarning()">OK</button>
   </div>
 </div>
 
